--- a/music-server/client-side/client-side.html
+++ b/music-server/client-side/client-side.html
@@ -54,7 +54,7 @@
             <marquee id="musicName">musicName</marquee>
         </div> -->
         <div class="slider">
-            <span class="slide-text" id="musicName">musicName</span>
+            <span class="slide-text" id="musicName"></span>
           </div>
           
 
